# axum-askama-htmx-libsql-playground

./: Cargo.toml  LICENSE  README  README.md  Secrets.example.toml  Shuttle.toml  bacon.toml
migrations/: 1_setup.sql  1_setup_tables.sql  2_insert_initial_counter.sql
sql/: 1_increment_counter.sql  2_set_counter.sql  3_select_counter_value.sql  4_create_counter.sql  5_select_all_counters.sql  6_delete_counter.sql
src/: main.rs  routes.rs  sse.rs  state.rs  webroutes.rs
src/components/: common.rs  counter.rs  mod.rs  pages.rs
styles/: main.css
templates/: error.html  index.html
templates/partials/: add_button.html  buttons.html  counter.html  delete_button.html  head.html
templates/partials/counter/: add_counter.html  buttons.html  counter.html  counter_summary.html  counter_summary_value.html  counter_value.html  counter_value_update.html
