[package]
name = "axumtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12", default-features = false, features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
axum = "0.7.4"
axum-htmx = "0.5"
include_dir = "0.7.3"
serde = { version = "1.0.196", features = ["derive"] }
libsql = { git = "https://github.com/tursodatabase/libsql" }
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
tower-http = { version = "0.5", features = ["fs"] }
